<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="66dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/a"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="28dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:text="ACTUALIZAR USUARIO" />

    <EditText
        android:id="@+id/txteditCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="170dp" />

    <EditText
        android:id="@+id/txteditContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:text="Nueva contraseña"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txteditNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txteditApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txteditDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txteditCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/celular"
        android:inputType="number" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnactualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/actualizar"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="533dp" />

        <Button
            android:id="@+id/btncancelaract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/regresar"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="533dp" />


    </LinearLayout>

</LinearLayout>