<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo7"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/b"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="28dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="78dp"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:text="Lista usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsuariocrear"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:drawableLeft="@drawable/email"
        android:ems="18"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#FBFBFB"
        android:textColorHint="#FBFBFB" />

    <EditText
        android:id="@+id/txtContraseñacrear"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:drawableLeft="@drawable/pass"
        android:ems="18"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#FBFBFB"
        android:textColorHint="#FBFBFB"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Crea tu contraseña"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txtNombrecrear"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:drawableLeft="@drawable/nombre"
        android:ems="18"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#FBFBFB"
        android:textColorHint="#FBFBFB" />

    <EditText
        android:id="@+id/txtApellidocrear"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:drawableLeft="@drawable/nombre"
        android:ems="18"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#FBFBFB"
        android:textColorHint="#FBFBFB" />

    <EditText
        android:id="@+id/txtDireccioncrear"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:drawableLeft="@drawable/direccion2"
        android:ems="18"
        android:hint="@string/direccion"
        android:inputType="textPersonName"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#FBFBFB"
        android:textColorHint="#FBFBFB" />

    <EditText
        android:id="@+id/txtCelularcrear"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:drawableLeft="@drawable/celular"
        android:ems="18"
        android:hint="@string/celular"
        android:inputType="number"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#FBFBFB"
        android:textColorHint="#FBFBFB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:drawableLeft="@drawable/usuario_listo"
            android:hint="@string/crear"
            android:textColor="#FBFBFB"
            android:textColorHighlight="#FBFBFB"
            android:textColorHint="#FBFBFB"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="533dp" />

        <Button
            android:id="@+id/btncancelarreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_orange_light"
            android:drawableLeft="@drawable/no"
            android:hint="@string/cancelar"
            android:textColor="#FBFBFB"
            android:textColorHighlight="#FBFBFB"
            android:textColorHint="#FBFBFB"
            tools:layout_editor_absoluteX="246dp"
            tools:layout_editor_absoluteY="533dp" />


    </LinearLayout>


</LinearLayout>