<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo9"
    android:orientation="vertical"
    tools:context=".activity.VentaHistorialDetalleActivity">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"
                android:backgroundTint="#7D8385"
                android:hint="@string/fecha">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/avhdActvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/negro" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"
                android:backgroundTint="#606465"
                android:hint="@string/nombre_cliente">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/avhdActvCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/negro" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"
                android:backgroundTint="#77797A"
                android:hint="@string/observacion">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/avhdTietObservacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/negro" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.99">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/avhdRvProductosSeleccionados"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="center">

                    <Button
                        android:id="@+id/avhdBCancelar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button_circler_cancelar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:textColor="@color/blanco"
                    android:textSize="34sp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/total"
                        android:textColorHint="@color/blanco"
                        android:textSize="24sp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/avhdTietTotal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:enabled="false"
                            android:text="@string/precio_item_cero"
                            android:textColor="@color/blanco"
                            android:textSize="24sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>